--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -45,6 +45,7 @@
 // --- Menus ---
 .se-navbar-menus {
   position: absolute;
+  z-index: 1000;
   right: -80%;
   top: 0;
   width: 80%;
@@ -68,6 +69,9 @@
     font-size: 18px;
     padding: 0 20px;
     color: #FFF;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     &:hover {
       text-decoration: none;
       color: #FFF;
@@ -163,6 +167,7 @@
       top: 100%;
       right: 0 !important;
       height: auto;
+      width: auto;
       @include box-shadow(2px 2px 4px rgba(0,0,0,.4));
       .menu-item {
         height: 40px;
